# gym-battleship-LLM

./: .gitignore  README.md  compare_heuristic_lpml.py  compare_strategies.py  evaluate_expert.py  evaluate_expert_verbose.py  evaluate_model.py  expert_tracking.txt  fix_distillation.py  improved_kl_distillation.py  minimal_eval.py  pipeline.md  pyproject.toml  quick_test.py  requirements.txt  run_experiment.sh  setup.py  test_model.py  update_student_policy.py
backup/: annotate.py  check_model.py  evaluate_expert_detailed.py  model_check_output.txt  rag_vs_student.py  run_expert_training.py  run_hybrid_experiment.sh  run_hybrid_pipeline.py  track_actions.py  train_student_policy.py.backup
examples/: analyze_lpml_vs_llm.py  annotate_trajectories.py  evaluate_model.py  lpml_vs_llm.py  rag_vs_student_analysis.py  train_teacher_ppo.py
examples/figures/: repot.md
gym_battleship/: __init__.py
gym_battleship.egg-info/: SOURCES.txt
gym_battleship/environments/: adversarial_battleship.py  battleship.py
logs/PPO_1/: events.out.tfevents.1747794173.ikeglab-GPU02.19594.0
logs/PPO_10/: events.out.tfevents.1747811398.ikeglab-GPU02.4389.0
logs/PPO_11/: events.out.tfevents.1747811573.ikeglab-GPU02.5432.0
logs/PPO_12/: events.out.tfevents.1747813517.ikeglab-GPU02.13824.0
logs/PPO_13/: events.out.tfevents.1747813681.ikeglab-GPU02.14555.0
logs/PPO_14/: events.out.tfevents.1747815058.ikeglab-GPU02.18733.0
logs/PPO_15/: events.out.tfevents.1747815212.ikeglab-GPU02.19325.0
logs/PPO_16/: events.out.tfevents.1747815280.ikeglab-GPU02.19591.0
(+20 files in other folders)
